--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Leetcode Difficulty Rating",
   "version": "1.0",
-  "description": "Replace Leetcode problem's difficulty with a more precise rating.",
+  "description": "Replace Leetcode problem's difficulty with a more precise contest rating.",
   "permissions": ["storage"],
   "content_scripts": [
     {
