feat: add option to not show N/A

--- a/manifest.json
+++ b/manifest.json
@@ -9,5 +9,11 @@
       "js": ["content.js"],
       "matches": ["*://leetcode.com/*"]
     }
-  ]
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "action": {
+    "default_popup": "popup.html"
+  }
 }
