--- a/manifest.json
+++ b/manifest.json
@@ -4,16 +4,24 @@
   "version": "1.0",
   "description": "Replace Leetcode problem's difficulty with a more precise contest rating.",
   "permissions": ["storage"],
+
+  "icons": {
+    "16": "icons/icon-16.png",
+    "32": "icons/icon-32.png",
+    "48": "icons/icon-48.png",
+    "128": "icons/icon-128.png"
+  },
+
   "content_scripts": [
     {
-      "js": ["content.js"],
+      "js": ["src/content.js"],
       "matches": ["*://leetcode.com/*"]
     }
   ],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "src/background.js"
   },
   "action": {
-    "default_popup": "popup.html"
+    "default_popup": "src/popup.html"
   }
 }
