--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
   "content_scripts": [
     {
       "js": ["src/content.js"],
-      "matches": ["*://leetcode.com/*"]
+      "matches": ["*://leetcode.com/*", "*://leetcode.cn/*"]
     }
   ],
   "background": {
